--- a/code/m-view/src/assets/css/color.scss
+++ b/code/m-view/src/assets/css/color.scss
@@ -1,5 +1,7 @@
 //字体颜色
 $fontColor1:#333;$fontColor2:#666;$fontColor3:#999;
 $mainColor:#F60;$linkColor:#39f;$blackColor:#000;
+$background:#ddd;
+$headerblackColor:#f7ae7d;
 //字体大小
-$fontSize1:12px;$fontSize2:14px;$fontSize3:16px;
+$fontSize1:12px;$fontSize2:14px;$fontSize3:16px;$title:36px
