--- a/code/m-view/src/assets/css/color.scss
+++ b/code/m-view/src/assets/css/color.scss
@@ -3,5 +3,6 @@ $fontColor1:#333;$fontColor2:#666;$fontColor3:#999;
 $mainColor:#F60;$linkColor:#39f;$blackColor:#000;
 $background:#ddd;
 $headerblackColor:#f7ae7d;
+$interline: #f0f0f0;
 //字体大小
-$fontSize1:12px;$fontSize2:14px;$fontSize3:16px;$title:36px
+$fontSizeSmall:9px;$fontSize1:12px;$fontSize2:14px;$fontSize3:16px;$title:36px
