footer css & layout

--- a/code/m-view/src/assets/css/color.scss
+++ b/code/m-view/src/assets/css/color.scss
@@ -5,4 +5,4 @@ $background:#ddd;
 $headerblackColor:#f7ae7d;
 $interline: #f0f0f0;
 //字体大小
-$fontSizeSmall:9px;$fontSize1:12px;$fontSize2:14px;$fontSize3:16px;$title:36px
+$fontSizeSmall:9px;$fontSize1:12px;$fontSize2:14px;$fontSize3:16px;$title:36px;$title1:31px
